--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -22,12 +22,12 @@
         app:layout_constraintVertical_bias="0.51">
 
         <EditText
-            android:id="@+id/edName"
+            android:id="@+id/edMobile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:ems="10"
-            android:hint="Name"
+            android:hint="mobile"
             android:inputType="textPersonName" />
 
         <EditText
